[Develop]: fixed some broken css files.

--- a/app/assets/stylesheets/article/show/gallery.css.scss
+++ b/app/assets/stylesheets/article/show/gallery.css.scss
@@ -2,24 +2,24 @@
 @import "layout/setting";
 
 
-#article-show-gallery { 
+#article-show-gallery {
   display: none;
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;  
+  height: 100%;
   width: 100%;
   min-width: $SUPPORT_VIEWPORT_MIN_WIDTH;
   z-index: 1000;
 }
 
 
-#article-show-gallery-main { 
+#article-show-gallery-main {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;  
-  width: 100%; 
+  height: 100%;
+  width: 100%;
   z-index: 2000;
 }
 
@@ -34,9 +34,9 @@
   background-color: transparent;
   @include opacity(0);
   z-index: 1000;
-  
+
   &:hover, &:active {
-    @include background-image(linear-gradient(to bottom, rgba(255,255,255,0), #fff 35%, #fff 65%, rgba(255,255,255,0)));
+    @include background-image(linear-gradient(bottom, rgba(255,255,255,0), #fff 35%, #fff 65%, rgba(255,255,255,0)));
     @include opacity(0.5);
   }
 }
@@ -52,9 +52,9 @@
   background-color: transparent;
   @include opacity(0);
   z-index: 1000;
-  
+
   &:hover, &:active {
-    @include background-image(linear-gradient(to bottom, rgba(255,255,255,0), #fff 35%, #fff 65%, rgba(255,255,255,0)));
+    @include background-image(linear-gradient(bottom, rgba(255,255,255,0), #fff 35%, #fff 65%, rgba(255,255,255,0)));
     @include opacity(0.5);
   }
 }
