--- a/app/assets/stylesheets/layout/leftNav.css.scss
+++ b/app/assets/stylesheets/layout/leftNav.css.scss
@@ -7,13 +7,13 @@
   top: 0;
   height: 200%;
   z-index: $LAYOUT_LEFT_NAV_Z_INDEX;
-  
+
   background-color: #f8f8f8;
-  @include background-image(linear-gradient(to right, #ffffff 0%, #f8f8f8 100%));
-  
+  @include background-image(linear-gradient(right, #ffffff 0%, #f8f8f8 100%));
+
   border-right: 1px solid #e7e7e7;
   @include box-shadow(inset 1px 0 0 rgba(255, 255, 255, 0.15), 1px 0 5px rgba(0, 0, 0, 0.075));
-    
+
   @include transform(translateZ(0));
 }
 
